k8s/client-cluster-ip.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: client-cluster-ip-service
subsets:
  - addresses:
      - ip: 10.0.40.1
    ports:
      - name: client-cluster-ip-service
        port: 4000
        protocol: TCP
